--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,38 +1,5 @@
 <h1>Tasks#new</h1>
 
-<%= form_with scope: :task, url: tasks_path, local: true do |form| %>
+<%= render 'form' %>
 
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@task.errors.count, "error") %> dun made this 
-        article no savey savey:
-      </h2>
-      <ul>
-        <% @task.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-    <p>
-      <%= form.label :day %><br>
-      <%= form.text_field :day %>
-    </p>
-
-    <p>
-    <%= form.label :duty %><br>
-    <%= form.text_field :duty %>
-  </p>
- 
-   
-    <p>
-      <%= form.label :description %><br>
-      <%= form.text_area :description %>
-    </p>
-   
-    <p>
-      <%= form.submit %>
-    </p>
-  <% end %>
+<%= link_to 'See All', tasks_path %>
